--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   </head>
   
   <body style="display:flex, justify-content:center, align-items:center">
-    <img src="snapcode.png" alt="Snap Code" />
+    <img src="snapcode.png" alt="Snap Code" width="500px" height="500px" />
   </body>
