--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Snap Code</title>
   </head>
   
-  <body style="display:flex; justify-content:center; align-items:center;">
-    <img src="snapcode.png" alt="Snap Code" width="200px" height="200px" />
+  <body>
+    <div style="display:flex; justify-content:center; align-items:center;">
+      <img src="snapcode.png" alt="Snap Code" width="200px" height="200px" />
+    </div>
   </body>
