--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   
   <body>
-    <div style="display:flex; justify-content:center; align-items:center;">
+    <div style="display:flex; justify-content:center; align-items:center; position:absolute; left:50%; rigth:50%; 
+          transform:translate(-50%, -50%);">
       <img src="snapcode.png" alt="Snap Code" width="200px" height="200px" />
     </div>
   </body>
