--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   
   <body>
-    <div style="display:flex; justify-content:center; align-items:center; position:absolute; left:50%; top:50%; 
-          transform:translate(-50%, -50%);">
+    <div style=" position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);">
       <img src="snapcode.png" alt="Snap Code" width="500px" height="500px" />
     </div>
   </body>
